--- a/css/index.css
+++ b/css/index.css
@@ -170,9 +170,6 @@ hr {
     width: 100%;
     padding: 0px 40px 0px 40px;
 }
-
-
-
 #cons-process {
     background-color: rgb(224, 224, 224);
     text-align: center;
@@ -290,7 +287,7 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
        max-width: 400px;
        margin: auto;
    }
-   #name, #phone, #date, #my-form-button {
+   #name, #phone, #date, #my-form-button, #email {
        border: none;
        border-radius: 10px;
        padding: 10px;
@@ -344,7 +341,7 @@ padding-top: 80px;
     padding-top: 80px;
 }
 .my-clinic p {
-    padding-top: 40px;
+    padding: 20px 0px 80px 0px;
     font-size: 24px;
 }
 .my-clinic {
@@ -393,29 +390,7 @@ text-align: center;
     border: none;
     font-size: 20px;
 }
-.my-form1 {
-    background-color: rgb(0, 65, 86);
-    
-  }
 
- #second-name, #second-phone, #email, #textarea {
-       border: none;
-       border-radius: 10px;
-       padding: 10px 190px 10px 190px;
-       margin: 15px;
-       min-width: 250px;
-       background-color: rgb(218, 218, 218);
-       color:rgb(139, 139, 139);
-   }
-   #my-form1 {
-       display: flex;
-       flex-direction: column;
-       align-items:center;
-       padding: 20px;
-       background-color: white;
-       margin: auto;
-       max-width: 900px;
-   }
    .footer-info {
        display: flex;
        flex-direction: column;
