--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100; 400;700&display=swap" rel="stylesheet"');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"');
 :root {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lobster', cursive;
     --main-color:  rgb(23, 103, 129);
     scroll-behavior: smooth;
 } 
